# HandEvaluator

./: CMakeLists.txt  README.md  holdem_evaluator.cpp  main.cpp
